WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139058
[CSS Grid Layout] Wrong arguments passed to computeNormalizedFractionBreadth
https://bugs.webkit.org/show_bug.cgi?id=139058
Summary
[CSS Grid Layout] Wrong arguments passed to computeNormalizedFractionBreadth
Sergio Villar Senin
Reported
2014-11-26 03:57:07 PST
RenderGrid::computeNormalizedFractionBreadth() is supposed to get as fourth argument either the grid element's content box size or the max-size of a particular grid item. For the former we were incorrectly passing the free space after distributing the available space to tracks. Apart from that, that method has a bug in its implementation. As we were using the free space instead of the grid element's content box size, we didn't have to subtract the usedBreadth of grid tracks from the passed in value. That does not work for the case of the caller passing the max-size of a particular item.
Attachments
Patch
(8.90 KB, patch)
2015-01-19 06:40 PST
,
Sergio Villar Senin
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2015-01-19 06:40:03 PST
Created
attachment 244902
[details]
Patch
Andreas Kling
Comment 2
2015-01-19 11:34:01 PST
Comment on
attachment 244902
[details]
Patch r=me
Sergio Villar Senin
Comment 3
2015-01-20 01:19:51 PST
Committed
r178701
: <
http://trac.webkit.org/changeset/178701
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug